# swagger.json
@@ -1,24 +1,19 @@
 {
     "swagger": "2.0",
     "info": {
-      "description": "This is a sample server Petstore server.  You can find out more about     Swagger at [http://swagger.io](http://swagger.io) or on [irc.freenode.net, #swagger](http://swagger.io/irc/).      For this sample, you can use the api key `special-key` to test the authorization     filters.",
+      "description": "Swagger UI for Chime - MSA phase 2",
       "version": "1.0.0",
-      "title": "Swagger Petstore",
-      "termsOfService": "http://swagger.io/terms/",
+      "title": "Swagger - Chime",
       "contact": {
-        "email": "apiteam@swagger.io"
-      },
-      "license": {
-        "name": "Apache 2.0",
-        "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
+        "email": "lincoln.choy1997@gmail.com"
       }
     },
-    "host": "petstore.swagger.io",
-    "basePath": "/v2",
+    "host": "chimemsa.azurewebsites.net",
+    "basePath": "",
     "tags": [
       {
-        "name": "Login",
-        "description": "Table with user logins",
+        "name": "auth",
+        "description": "Related to user logins",
         "externalDocs": {
           "description": "Find out more",
           "url": "http://swagger.io"
@@ -42,14 +37,14 @@
       "http"
     ],
     "paths": {
-      "/pet": {
+      "/auth/register": {
         "post": {
           "tags": [
-            "Login"
+            "auth"
           ],
-          "summary": "Add a new sthe store",
+          "summary": "Registers a new user",
           "description": "",
-          "operationId": "addPet",
+          "operationId": "registerUser",
           "consumes": [
             "application/json",
             "application/xml"
@@ -62,10 +57,10 @@
             {
               "in": "body",
               "name": "body",
-              "description": "Pet object that needs to be added to the store",
+              "description": "User object that defines the user",
               "required": true,
               "schema": {
-                "$ref": "#/definitions/Pet"
+                "$ref": "#/definitions/User"
               }
             }
           ],
@@ -859,87 +854,20 @@
       }
     },
     "definitions": {
-      "Order": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "type": "integer",
-            "format": "int64"
-          },
-          "petId": {
-            "type": "integer",
-            "format": "int64"
-          },
-          "quantity": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "shipDate": {
-            "type": "string",
-            "format": "date-time"
-          },
-          "status": {
-            "type": "string",
-            "description": "Order Status",
-            "enum": [
-              "placed",
-              "approved",
-              "delivered"
-            ]
-          },
-          "complete": {
-            "type": "boolean",
-            "default": false
-          }
-        },
-        "xml": {
-          "name": "Order"
-        }
-      },
-      "Category": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "type": "integer",
-            "format": "int64"
-          },
-          "name": {
-            "type": "string"
-          }
-        },
-        "xml": {
-          "name": "Category"
-        }
-      },
       "User": {
         "type": "object",
         "properties": {
-          "id": {
-            "type": "integer",
-            "format": "int64"
-          },
           "username": {
             "type": "string"
           },
-          "firstName": {
+          "first": {
             "type": "string"
           },
-          "lastName": {
-            "type": "string"
-          },
-          "email": {
+          "last": {
             "type": "string"
           },
           "password": {
             "type": "string"
-          },
-          "phone": {
-            "type": "string"
-          },
-          "userStatus": {
-            "type": "integer",
-            "format": "int32",
-            "description": "User Status"
           }
         },
         "xml": {
